--- a/src/themes/card.scss
+++ b/src/themes/card.scss
@@ -13,7 +13,7 @@ $positionList: ("top", "right", "bottom", "left");
 	}
 
 	&.companyinfo-container {
-		height: 600px;
+		// height: 600px;
 
 		.companyinfo-row {
 			border-bottom: 1px solid #e3e6f0;
