--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -1,10 +1,8 @@
 .header {
 	height: 4.5rem;
 	padding: 0.5rem 1rem;
-	background-color: color(white);
+	background-color: var(--white);
 	z-index: 1050;
-
-	
 
 	.icon-groups {
 		position: relative;
@@ -37,20 +35,21 @@
 			overflow: hidden;
 
 			.dropdown-header {
-				background-color: color(primary);
-				color: color(white);
+				background-color: var(--primary);
+				color: var(--white);
 				font-weight: 800;
 				font-size: .65rem;
 				text-transform: uppercase;
 			}
 
 			.dropdown-header:active {
-				background-color: color(primary) !important;
-				color: color(white) !important;
+				background-color: var(--primary) !important;
+				color: var(--white) !important;
 			}
 
 			.dropdown-item {
 				display: flex;
+				color: var(--black);
 				border-bottom: 1px solid #e3e6f0;
 				flex-direction: row;
 
@@ -63,8 +62,8 @@
 						display: flex;
 						align-items: center;
 						justify-content: center;
-						color: color(white);
-						background-color: color(primary);
+						color: var(--white);
+						background-color: var(--primary);
 						width: 3rem;
 						height: 3rem;
 						font-size: 0.8rem;
@@ -83,16 +82,11 @@
 					.dropdown-title {
 						display: flex;
 						font-size: 0.7rem;
-						color: color(gray);
+						color: var(--gray);
 						font-weight: 700;
 
-						span {
-							flex: 1
-						}
-
-						i {
-							transition: all 0.25s ease-in-out;
-						}
+						span { flex: 1 }
+						i { transition: all 0.25s ease-in-out; }
 					}
 
 					.dropdown-body {
