--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -1,23 +1,17 @@
 .navbar-left {
 	flex-direction: column;
 	width: 14.5rem !important;
-	background-color: color(primary);
+	background-color: var(--primary);
 	height: 100%;
-
-	// border-top-right-radius: 15px;
-    // border-bottom-right-radius: 15px;
 	flex-shrink: 0;
-	// overflow: unset;
 	z-index: 1020;
 
 	transition: all 0.2s linear;
 
 	ul:not(.navitem-children-parent) {
-		// min-height: 100%;
-		color: color(white);
+		color: var(--white);
 		li {
 			position: relative;
-			// overflow: hidden;
 
 			.company, .company-small {
 				padding: 1rem 1.75rem;
@@ -32,7 +26,7 @@
 			.navitem-container {
 				padding: 1rem 1.75rem;
 				display: block;
-				color: color(light);
+				color: var(--light);
 				font-size: .85rem;
 				font-weight: normal;
 				text-decoration: none;
@@ -45,9 +39,6 @@
 					}
 
 					.item-right, .item-left {
-						// margin-top: 4px;
-						// position: relative;
-						// top: 4px;
 						display: flex;
 						justify-content: center;
 						align-items: center;
@@ -58,8 +49,6 @@
 					.item-right {
 						font-size: 80%;
 						transition: transform 0.2s linear;
-						// position: absolute;
-						// right: 0;
 						justify-content: flex-end;
 					}
 				}
@@ -70,7 +59,7 @@
 			}
 
 			.navitem-container.active {
-				color: color(white);
+				color: var(--white);
 				font-weight: 600;
 			}
 
@@ -79,7 +68,7 @@
 				opacity: 0;
 
 				position: absolute;
-				background-color: color(white);
+				background-color: var(--white);
 
 				height: auto;
 				width: 14rem;
@@ -105,7 +94,7 @@
 
 						div.navitem-string {
 							align-items: flex-start;
-							color: color(primary);
+							color: var(--primary);
 							font-size: small !important;
 						}
 					}
@@ -113,7 +102,7 @@
 
 				.navitem-group {
 					text-align: left;
-					color: color(primary);
+					color: var(--primary);
 					padding: 0.85rem 1.5rem;
 					padding-bottom: 0px;
 				}
@@ -151,7 +140,7 @@
 
 		li:hover {
 			a {
-				// background-color: color(primary);
+				// background-color: var(--primary);
 				filter: brightness(120%)
 			}
 		}
