--- a/src/assets/styles/tabs.scss
+++ b/src/assets/styles/tabs.scss
@@ -14,7 +14,7 @@
 		content: "";
 		position: absolute;
 		bottom: 0;
-		border-bottom: 3px solid color(primary);
+		border-bottom: 3px solid var(--primary);
 		width: 0%;
 
 		transition: all 0.2s linear;
