--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -91,3 +91,5 @@ p { white-space: pre-wrap; }
 .text-primary { color: var(--primary) !important; }
 .text-grey { color: var(--grey) !important; }
 .text-black { color: var(--black) !important; }
+
+a:hover { text-decoration: none; }
