--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -175,7 +175,8 @@
 						
 						.item-center {
 							margin-top: 0.5rem;
-							flex: 1;
+							// flex: 1;
+							text-align: center;
 						}
 
 						.item-left {
