--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -1,12 +1,7 @@
 div.table {
 	position: relative;
-	// background-color: var(--primary);
-	// height: calc(100vh - 5.5rem - 36px - 2rem);
 	border-radius: .25rem;
 	margin-bottom: 0;
-	// margin-right: 1rem;
-
-	// overflow: hidden;
 
 	display: flex;
 
@@ -17,8 +12,8 @@ div.table {
 		position: sticky;
 	}
 
-	div.row-group:first-child {
-		width: min-content;
+	div.row-group:first-child .row-header, div.row-group:first-child .row-body {
+		width: auto;
 	}
 	
 	div.row-header, div.row-body {
@@ -27,7 +22,7 @@ div.table {
 		padding: 0.75rem;
 		border: 1px solid var(--light-grey);
 		height: 50px;
-		min-width: 150px;
+		width: 150px;
 	}
 
 	div.row-body:nth-child(even) {
