--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -50,7 +50,7 @@
 		display: flex;
 		align-items: center;
 		padding: 0.75rem;
-		border: .5px solid var(--light-grey);
+		border: 1px solid var(--light-grey);
 		height: 50px;
 	}
 
@@ -94,6 +94,20 @@
 			i:hover {
 				color: rgba(255, 255, 255, 1);
 			}
+		}
+
+		&.number {
+			span {
+				display: inline-block;
+				width: 100%;
+			}
+		}
+	}
+
+	.row-body {
+		span {
+			display: inline-block;
+			width: 100%;
 		}
 	}
 
