Added calendar components

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -106,3 +106,4 @@ a:hover { text-decoration: none; }
 .simplebar-track.simplebar-vertical { margin-right: .15rem; } 
 
 body[have-table=true] .simplebar-track.simplebar-vertical { top: 55px; }
+body[have-calendar=true] .simplebar-track.simplebar-vertical { top: 75px; }
