--- a/src/assets/styles/calendar.scss
+++ b/src/assets/styles/calendar.scss
@@ -1,4 +1,5 @@
 .calendar-container {
+	width: 100%;
 	border-radius: .25rem;
 	border: 1px solid var(--light-grey);
 	overflow: hidden;
@@ -25,26 +26,57 @@
 			div {
 				display: flex;
 				flex: 1;
-				padding: 1rem;
+				padding: .75rem;
+				justify-content: center;
 
 				span {
-					padding: .5rem;
-					width: 2.5rem;
-					height: 2.5rem;
+					// padding: .5rem;
+					// width: 2rem;
+					// height: 2rem;
 					display: flex;
 					justify-content: center;
 					align-items: center;
+					background-color: transparent;
+					border-radius: 50%;
+
+					transition: 0.25s background-color linear;
 				}
 
-				&.active {
+				&[data-active] {
 					span {
 						background-color: var(--primary);
 						color: var(--white);
-						border-radius: 50%;
 					}
 				}
 
-				&.inactive { background-color: var(--light-grey); }
+				&[data-holiday] {
+					background-color: rgb(255, 210, 210);
+					font-weight: 700 !important;
+					color: var(--danger) !important;
+
+					&[data-active] {
+						span {
+							background-color: var(--danger);
+						}
+					}
+				}
+
+				&[data-not-currentmonth] {
+					background-color: rgba(0, 0, 0, .05);
+					font-weight: 500;
+					color: rgba(0, 0, 0, .5);
+				}
+			}
+		}
+
+		.calendar-date-row {
+			div {
+				height: 5rem;
+				cursor: pointer;
+				span {
+					width: 1.75rem;
+					height: 1.75rem;
+				}
 			}
 		}
 
@@ -64,9 +96,25 @@
 		border: 0;
 		color: unset !important;
 		font-size: large;
-		font-weight: 600;
+		// font-weight: 600;
+		width: 7rem;
+		text-align: right;
 	}
 	.dropdown-toggle::after { content: none; }
+
+	&.form-control {
+		width: 75px;
+		background-color: unset;
+		border: unset;
+
+
+		&[readonly] {
+			cursor: pointer;
+			// -webkit-user-select: none; /* Chrome/Safari */        
+			// -moz-user-select: none; /* Firefox */
+			// -ms-user-select: none; /* IE10+ */
+		}
+	}
 }
 
 .calendar-caret {
