--- a/src/assets/styles/calendar.scss
+++ b/src/assets/styles/calendar.scss
@@ -5,9 +5,11 @@
 	overflow: hidden;
 	
 	.calendar-header {
-		background-color: var(--primary);
-		color: var(--white);
 		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: var(--primary) !important;
+		color: white !important;
 
 		div { padding: .5rem; }
 		.form-control { background-color: rgba(255, 255, 255, .8); }
@@ -91,14 +93,32 @@
 }
 
 .calendar-toolbar {
+	display: flex;
+
+	.left, .right {
+		display: flex;
+		flex: 1;
+		// flex-direction: row;
+	}
+
+	.right {
+		justify-content: flex-end;
+		align-items: center;
+	}
+	
 	.dropdown-toggle {
-		background-color: white !important;
+		background-color: transparent !important;
 		border: 0;
 		color: unset !important;
 		font-size: large;
 		// font-weight: 600;
 		width: 7rem;
-		text-align: right;
+		text-align: center;
+
+		padding: .25rem .5rem;
+		// font-size: .875rem;
+		line-height: 1.5;
+		border-radius: .2rem;
 	}
 	.dropdown-toggle::after { content: none; }
 
@@ -106,7 +126,8 @@
 		width: 75px;
 		background-color: unset;
 		border: unset;
-
+		color: var(--primary);
+		// font-size: .875rem;
 
 		&[readonly] {
 			cursor: pointer;
@@ -126,4 +147,117 @@
 	justify-content: center;
 	align-items: center;
 	cursor: pointer;
+}
+
+.datepicker-container {
+	width: min-content;
+	border-radius: .25rem;
+	border: 1px solid var(--light-grey);
+	// overflow: hidden;
+
+	* {
+		font-size: .875rem !important;
+	}
+
+	.calendar-header {
+		background-color: var(--primary);
+		color: var(--white);
+		display: flex;
+
+		div { padding: .5rem; }
+		.form-control { background-color: rgba(255, 255, 255, .8); }
+		.calendar-month { flex: 1; }
+	}
+
+	.datepicker-header {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: var(--primary) !important;
+		color: white !important;
+
+		button {
+			font-size: .875rem !important;
+		}
+
+		.form-control {
+			color: white !important;
+			font-size: .875rem !important;
+		}
+	}
+
+	.datepicker-body {
+		display: flex;
+		flex-direction: column;
+		height: 100%;
+		
+		.calendar-day-row, .calendar-date-row {
+			display: flex;
+			flex-direction: row;
+			
+			div {
+				display: flex;
+				flex: 1;
+				padding: .75rem;
+				justify-content: center;
+
+				span {
+					// padding: .5rem;
+					// width: 2rem;
+					// height: 2rem;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					background-color: transparent;
+					border-radius: 50%;
+
+					transition: 0.25s background-color linear;
+				}
+
+				&[data-active] {
+					span {
+						background-color: var(--primary);
+						color: var(--white);
+					}
+				}
+
+				&[data-holiday] {
+					background-color: rgb(255, 210, 210);
+					font-weight: 700 !important;
+					color: var(--danger) !important;
+
+					&[data-active] {
+						span {
+							background-color: var(--danger);
+						}
+					}
+				}
+
+				&[data-not-currentmonth] {
+					background-color: rgba(0, 0, 0, .05);
+					font-weight: 500;
+					color: rgba(0, 0, 0, .5);
+				}
+			}
+		}
+
+		.calendar-date-row {
+			div {
+				height: 5rem;
+				cursor: pointer;
+				span {
+					width: 1.75rem;
+					height: 1.75rem;
+				}
+			}
+		}
+
+		.calendar-day-row {
+			background-color: var(--primary);
+			color: var(--white);
+			div { 
+				height: auto; 
+			}
+		}
+	}
 }
