--- a/src/assets/styles/form.scss
+++ b/src/assets/styles/form.scss
@@ -18,3 +18,12 @@
 		cursor: pointer;
 	}
 }
+
+.input-portal {
+	position: absolute;
+	z-index: 106;
+	// right: 0;
+	margin-top: 2.5rem;
+	// top: 0;
+	// margin-top: 2.5rem;
+}
