--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -45,6 +45,7 @@
 		.form-control {
 			background-color: white !important;
 			border-color: #ced4da !important;
+			border-right: 0;
 		}
 
 		.input-group-append {
@@ -52,27 +53,8 @@
 				background-color: white !important;
 				border-color: #ced4da !important;
 				color: var(--primary);
-			}
-
-			.dropdown:not(:last-child) {
-				.btn {
-					border-right: 0;
-					border-top-right-radius: 0;
-					border-bottom-right-radius: 0;
-				}
-			}
-			
-			.dropdown:last-child {
-				.btn {
-					border-top-left-radius: 0;
-					border-bottom-left-radius: 0;
-				}
-			}
-			
-			.dropdown-toggle {
-				&::after {
-					content: unset;
-				}
+				// border: unset;
+				border-left: 0;
 			}
 		}
 	}
@@ -237,4 +219,8 @@
 	100% {
 		background-position: 468px 0;
 	}
+}
+
+.table + .input-portal {
+	margin-top: 2.5rem;
 }
