--- a/src/assets/styles/calendar.scss
+++ b/src/assets/styles/calendar.scss
@@ -1,49 +1,46 @@
-.datepicker-container {
+.calendar-container {
+	position: relative;
+	--calendar-font-size: 0.75rem;
+
 	width: min-content;
 	border-radius: .25rem;
-	border: 1px solid var(--light-grey);
 	overflow: hidden;
+	border: 1px solid #dddddd;
 
 	* {
-		font-size: .875rem !important;
+		font-size: var(--calendar-font-size) !important;
 	}
 	
-	.datepicker-header {
+	.calendar-header {
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		background-color: var(--primary) !important;
 		color: white !important;
 
-		button {
-			font-size: .875rem !important;
-		}
-
-		.form-control {
+		.form-control, button {
 			color: white !important;
-			font-size: .875rem !important;
+			font-size: var(--calendar-font-size) !important;
+			border-color: transparent !important;
 		}
 	}
 
-	.datepicker-body {
+	.calendar-body {
 		display: flex;
 		flex-direction: column;
 		height: 100%;
 		
-		.datepicker-day-row, .datepicker-date-row {
+		.calendar-day-row, .calendar-date-row {
 			display: flex;
 			flex-direction: row;
 			
 			div {
 				display: flex;
 				flex: 1;
-				padding: .75rem;
+				padding: .5rem;
 				justify-content: center;
 
 				span {
-					// padding: .5rem;
-					// width: 2rem;
-					// height: 2rem;
 					display: flex;
 					justify-content: center;
 					align-items: center;
@@ -73,25 +70,27 @@
 				}
 
 				&[data-not-currentmonth] {
-					background-color: rgba(0, 0, 0, .05);
+					background-color: rgb(243, 243, 243);
 					font-weight: 500;
-					color: rgba(0, 0, 0, .5);
+					color: rgb(130, 130, 130);
 				}
 			}
 		}
 
-		.datepicker-date-row {
+		.calendar-date-row {
 			div {
 				height: 5rem;
 				cursor: pointer;
+				background-color: white;
+
 				span {
-					width: 1.75rem;
-					height: 1.75rem;
+					width: 1.5rem;
+					height: 1.5rem;
 				}
 			}
 		}
 
-		.datepicker-day-row {
+		.calendar-day-row {
 			background-color: var(--primary);
 			color: var(--white);
 			div { 
@@ -99,61 +98,56 @@
 			}
 		}
 	}
-}
 
-.datepicker-toolbar {
-	display: flex;
-
-	.left, .right {
+	.calendar-caret {
 		display: flex;
-		flex: 1;
-		// flex-direction: row;
-	}
-
-	.right {
-		justify-content: flex-end;
+		width: 1rem;
+		height: 1rem;
+		border-radius: 50%;
+		
+		justify-content: center;
 		align-items: center;
+		cursor: pointer;
 	}
-	
-	.dropdown-toggle {
-		background-color: transparent !important;
-		border: 0;
-		color: unset !important;
-		font-size: large;
-		// font-weight: 600;
-		width: 7rem;
-		text-align: center;
 
-		padding: .25rem .5rem;
-		// font-size: .875rem;
-		line-height: 1.5;
-		border-radius: .2rem;
-	}
-	.dropdown-toggle::after { content: none; }
+	.calendar-select-month {
+		display: flex;
+		justify-content: center;
+		align-items: center;
 
-	&.form-control {
-		width: 75px;
-		background-color: unset;
-		border: unset;
-		color: var(--primary);
-		// font-size: .875rem;
+		select {
+			-webkit-appearance: none;
+			-moz-appearance: none;
+			text-indent: 1px;
+			text-overflow: '';
 
-		&[readonly] {
-			cursor: pointer;
-			// -webkit-user-select: none; /* Chrome/Safari */        
-			// -moz-user-select: none; /* Firefox */
-			// -ms-user-select: none; /* IE10+ */
+			width: min-content;
+			text-align: center;
+			background-color: unset;
+			border: unset;
+
+			text-align: center;
+			text-align-last:center;
+
+			option {
+				color: black;
+				text-align: center;
+			}
 		}
 	}
-}
 
-.datepicker-caret {
-	display: flex;
-	width: 2rem;
-	height: 2rem;
-	border-radius: 50%;
-	
-	justify-content: center;
-	align-items: center;
-	cursor: pointer;
+	.calendar-select-year {
+		display: flex;
+
+		&.form-control {
+			width: 3.45rem;
+			background-color: var(--primary);
+			border: unset;
+			color: var(--primary);
+
+			&[readonly] {
+				cursor: pointer;
+			}
+		}
+	}
 }
