--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -70,6 +70,10 @@
 		padding: 0.75rem;
 		border: 1px solid var(--light-grey);
 		height: 50px;
+
+		span {
+			white-space: nowrap;
+		}
 	}
 
 	.row-header {
@@ -157,7 +161,11 @@
 	}
 
 	.row-body:nth-child(even) {
-		background-color: rgba(0, 0, 0, .05);
+		background-color: rgb(240, 240, 240);
+	}
+
+	.row-body:nth-child(odd) {
+		background-color: rgb(255, 255, 255);
 	}
 
 	.column-group:not(:first-child) {
