--- a/src/assets/styles/calendar.scss
+++ b/src/assets/styles/calendar.scss
@@ -28,7 +28,7 @@
 	.calendar-body {
 		display: flex;
 		flex-direction: column;
-		height: 100%;
+		// height: 100%;
 		
 		.calendar-day-row, .calendar-date-row {
 			display: flex;
