--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -1,14 +1,5 @@
-@media (min-width: 320px) and (max-width: 480px) {
-	.navbar-left {
-		position: absolute;
-		
-		&.closed {
-			left: -100%;
-		}
-	}
-}
-
 .navbar-left {
+	display: flex;
 	flex-direction: column;
 	width: 14.5rem !important;
 	background-color: var(--primary);
@@ -23,6 +14,8 @@
 		
 		li {
 			position: relative;
+
+			a { display: block; }
 
 			.app, .app-small {
 				padding: 1rem 1.75rem;
@@ -81,18 +74,19 @@
 				opacity: 0;
 
 				position: absolute;
-				background-color: var(--white);
+				// background-color: var(--white);
+				background-color: var(--primary);
 
 				height: auto;
 				width: 14rem;
 				margin: 0 1rem;
 				
 				margin-bottom: 1rem;
-				border-radius: 0.5rem;
+				// border-radius: 0.5rem;
 				top: 0;
 				left: 0;
 
-				z-index: 999;
+				z-index: 200;
 
 				transition: opacity 0.2s linear, left 0.2s linear;
 
@@ -108,6 +102,7 @@
 						div.navitem-string {
 							align-items: flex-start;
 							color: var(--primary);
+							color: var(--white);
 							font-size: small !important;
 						}
 					}
@@ -115,7 +110,8 @@
 
 				.navitem-group {
 					text-align: left;
-					color: var(--primary);
+					// color: var(--white);
+					color: rgba(255, 255, 255, 0.5);
 					padding: 0.85rem 1.5rem;
 					padding-bottom: 0px;
 				}
@@ -132,8 +128,17 @@
 
 			/* opening children */
 			div.navitem-container.open + ul.navitem-children-parent {
-				left: 100%;
+				/* left: 100%;
+				opacity: 1; */
+
+				/* temporary */
+				position: relative;
+				left: 0;
+				top: 0 !important;
 				opacity: 1;
+				width: 100%;
+				margin: auto;
+				box-shadow: unset !important;
 
 				li {
 					.navitem-container {
@@ -153,7 +158,6 @@
 
 		li:hover {
 			a {
-				// background-color: var(--primary);
 				filter: brightness(120%)
 			}
 		}
@@ -226,4 +230,128 @@
 	width: 0;
 	border-right: 1px solid #e3e6f0;
 	height: 80%;
+}
+
+@media (max-width: 480px) {
+	.navbar-left.mobile.mobile-opened + .navbar-left-overlay {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		background-color: rgba(0, 0, 0, 0.2);
+		z-index: 105;
+	}
+
+	.navbar-left {
+		position: absolute;
+		left: 0;
+		width: 75% !important;
+		z-index: 110;
+		
+		&.mobile {
+			left: -100%;
+		}
+
+		&.mobile-opened {
+			left: 0;
+		}
+
+		.app-nav-container {
+			display: flex;
+			align-items: center;
+
+			a {
+				flex: 1;
+			}
+
+			button {
+				margin-right: 1rem;
+				width: 40px;
+				height: 38px;
+			}
+		}
+
+		.avatar-group {
+			align-items: center;
+			.navitem-avatar-container {
+				display: flex;
+				margin-top: .75rem;
+				margin-bottom: .75rem;
+				
+				.avatar {
+					background-color: var(--white);
+					span {
+						font-size: 1rem;
+						color: var(--primary);
+					}
+				}
+
+				.avatar-user-name {
+					flex: 1;
+					padding: 0 1rem;
+					display: flex;
+					align-items: center;
+					// justify-content: center;
+					font-size: .85rem;
+					font-weight: normal;
+					text-transform: none;
+					color: var(--white);
+					white-space: nowrap;
+				}
+			}
+
+			.notification {
+				position: absolute;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				width: 50px;
+				height: 50px;
+
+				right: .5rem;
+
+				.badge-counter {
+					font-size: 50%;
+					margin-left: 10px;
+					margin-bottom: 10px;
+				}
+
+				i.fas {
+					font-size: 1.25rem;
+					color: var(--white);
+				}
+			}
+		}
+
+		// ul:not(.navitem-children-parent) {
+		// 	li {
+		// 		/* opening children */
+		// 		div.navitem-container.open + ul.navitem-children-parent {
+		// 			position: relative;
+		// 			left: 0;
+		// 			top: 0 !important;
+		// 			opacity: 1;
+		// 			width: 90%;
+		// 			margin: auto;
+		// 			box-shadow: unset !important;
+
+		// 			li {
+		// 				.navitem-container {
+		// 					.navitem-string {
+		// 						font-size: 80%;
+		// 					}
+		// 				}
+		// 			}
+		// 		}
+
+		// 		/* closing children */
+		// 		div.navitem-container.closing + ul.navitem-children-parent {
+		// 			left: 0;
+		// 			opacity: 0;
+		// 			height: 0;
+		// 		}
+		// 	}
+		// }
+	}
 }
