--- a/src/assets/styles/notification.scss
+++ b/src/assets/styles/notification.scss
@@ -1,3 +1,7 @@
+.notification-menu:focus {
+	outline: unset;
+}
+
 .header-container {
     .icon-groups {
         .badge, i.fas {
@@ -8,34 +12,168 @@
 			transform: scale(0.6);
             margin-left: 10px;
             margin-bottom: 10px;
-			// right: -5px;
-			// top: 5px;
 			z-index: 120;
 		}
     }
+
+	.notification-list {
+		top: 100%;
+		right: 1rem;
+		left: unset !important; /* override bootstrap */
+		width: 25rem;
+		border-radius: 7px;
+		overflow: hidden;
+		padding: 0;
+
+		svg {
+			width: 15rem;
+			height: 15rem;
+		}
+
+		.notification-header {
+			background-color: var(--primary);
+			color: var(--white);
+			font-weight: 800;
+			font-size: .65rem;
+			text-transform: uppercase;
+		}
+
+		.notification-header:active {
+			background-color: var(--primary) !important;
+			color: var(--white) !important;
+		}
+
+		.notification-item:active {
+			background-color: transparent;
+			color: unset;
+		}
+
+		&:nth-last-child() {
+			border-bottom: unset;
+		}
+
+		.notification-item {
+				display: flex;
+				color: var(--black);
+				border-bottom: 1px solid #e3e6f0;
+				flex-direction: row;
+
+				.notification-icon {
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					
+					i {
+						display: flex;
+						align-items: center;
+						justify-content: center;
+						color: var(--white);
+						background-color: var(--primary);
+						width: 3rem;
+						height: 3rem;
+						font-size: 0.8rem;
+						text-align: center;
+						border-radius: 50%;
+					}
+				}
+
+				.notification-content {
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					padding: 1rem;
+					flex: 1;
+
+					.notification-title {
+						display: flex;
+						font-size: 0.7rem;
+						color: var(--gray);
+						font-weight: 700;
+
+						span { flex: 1 }
+						i { transition: all 0.25s ease-in-out; }
+					}
+
+					.notification-body {
+						font-size: 0.9rem;
+						white-space: normal;
+						
+						.preview {
+							display: block;
+						}
+
+						.details {
+							opacity: 0;
+							overflow: hidden;
+
+							transition: all 0.25s;
+
+							.approver {
+								font-size: smaller;
+							}
+						}
+					}
+
+					.notification-footer {
+						cursor: pointer;
+						font-size: 0.7rem;
+						display: flex;
+
+						span {
+							flex: 1;
+						}
+
+					}
+
+					&.showdetails {
+						.notification-title {
+							i {
+								transform: rotate(-90deg);
+							}
+						}
+
+						.notification-body {
+							.details {
+								opacity: 1;
+							}
+						}
+					}
+				}
+			}
+	}
 }
 
 .notification {
-    .dropdown-header {
+    .notification-header {
         color: var(--white) !important;
     }
 }
 
 @media (max-width: 480px) {
 	.navbar-left {
-		.navitem-group-avatar {
-			.avatar-user-name {
-				.notification {
-					.badge-counter {
-						margin-left: .7rem;
-					}
+		.avatar-group {
+			.notification {
+				position: absolute;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				width: 50px;
+				height: 50px;
 
-					i {
-						color: var(--white);
-						font-size: 1.25rem;
-					}
+				right: 0rem;
+
+				.badge-counter {
+					font-size: 50%;
+					margin-left: 10px;
+					margin-bottom: 10px;
+				}
+
+				i.fas {
+					font-size: 1rem;
+					color: var(--white);
 				}
 			}
 		}
 	}
+	
 }
