--- a/src/assets/styles/loading.scss
+++ b/src/assets/styles/loading.scss
@@ -9,7 +9,8 @@
 	-webkit-animation-iteration-count: infinite;
 	-webkit-animation-name: placeHolderShimmer;
 	-webkit-animation-timing-function: linear;
-	background: #e6e6e6;
+	// background: #e6e6e6 !important;
+    background-color: #e6e6e6 !important;
 	background-image: linear-gradient(to right, #e6e6e6 0%, #d6d6d6 20%, #e6e6e6 40%, #e6e6e6 100%);
 	background-repeat: no-repeat;
 	background-size: 800px 800px;
@@ -37,23 +38,6 @@
 
 			&::placeholder, &::-moz-placeholder, &::-webkit-input-placeholder {
 				color: transparent;
-			}
-		}
-	}
-}
-
-.suspense {
-	&.loading {
-		.skeleton {
-			@include loadingAnimation;
-		}
-		
-		/* breadcrumb */
-		div {
-			span {
-				width: 20rem;
-				border-radius: .25rem;
-				@include loadingAnimation;
 			}
 		}
 	}
