--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -1,4 +1,7 @@
+
 .navbar-left {
+	--padding: 1rem 1.25rem;
+
 	display: flex;
 	flex-direction: column;
 	width: 14.5rem !important;
@@ -18,7 +21,7 @@
 			a { display: block; }
 
 			.app, .app-small {
-				padding: 1rem 1.75rem;
+				padding: var(--padding);
 				font-size: 1.5rem;
 				font-weight: 600;
 
@@ -30,7 +33,7 @@
 			}
 
 			.navitem-container {
-				padding: 1rem 1.75rem;
+				padding: var(--padding);
 				display: block;
 				color: var(--light);
 				font-size: .85rem;
@@ -55,7 +58,7 @@
 					.item-right {
 						font-size: 80%;
 						transition: transform 0.2s linear;
-						justify-content: flex-end;
+						justify-content: baseline;
 					}
 				}
 			}
@@ -75,13 +78,13 @@
 
 				position: absolute;
 				// background-color: var(--white);
-				background-color: var(--primary);
+				background-color: darken($primary, 5%);
 
 				height: auto;
 				width: 14rem;
 				margin: 0 1rem;
 				
-				margin-bottom: 1rem;
+				margin-bottom: 1rem !important;
 				// border-radius: 0.5rem;
 				top: 0;
 				left: 0;
@@ -206,6 +209,22 @@
 
 						.item-right {
 							display: none;
+						}
+					}
+				}
+
+				ul {
+					li {
+						.navitem-container {
+							.navitem-string {
+								align-items: center !important;
+								.item-left {
+									font-size: 1rem;
+								}
+								.item-center {
+									font-size: 80%;
+								}
+							}
 						}
 					}
 				}
