--- a/src/assets/styles/avatar.scss
+++ b/src/assets/styles/avatar.scss
@@ -14,6 +14,8 @@
 	display: flex;
 	width: 2.5rem;
 	height: 2.5rem;
+	min-width: 2.5rem;
+	min-height: 2.5rem;
 	border-radius: 50%;
 	background-color: var(--primary);
 	background-position: center;
